# remote-socket-integration-for-MQTT-and-HomeAssistant

./: .gitignore  README.md
ArduinoRemoteModule/: ArduinoRemoteModule.ino  README.md  SilvercrestCodes.cpp  SilvercrestCodes.h
remote_socket_integration/: Cargo.toml
remote_socket_integration/src/: config.rs  main.rs
remote_socket_integration/src/devices/: mod.rs  remote_socket.rs
remote_socket_integration/src/tools/: mod.rs
remote_socket_integration/src/tools/mqtt/: announce_devices.rs  device_controller.rs  device_listener.rs  mod.rs
remote_socket_integration/src/tools/serialport/: mod.rs  state_sender.rs
