[package]
name = "funk1"
version = "0.1.0"
authors = ["Jonas Greifenhain <cadivus@daverkomp.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = { git = "https://github.com/AtherEnergy/rumqtt" }
pretty_env_logger = "0.3.1"
serialport = { git = "https://github.com/Susurrus/serialport-rs" }
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
